<resources>
    <string name="app_name">mvvmdatabind2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In</string>
    <string name="dont_have_an_account_sign_up">New to ?? Sign up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Display Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="last">Last</string>
    <string name="id">ID</string>
    <string name="log_into_your_account">Log Into Your Account</string>

    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_all_memberships_in_one_place">Manage all MemberShips In One Place</string>
    <string name="desc11">Compare reviews, Features, Make Online payments with the app that manages your memberships</string>
    <string name="find">Find Best Services</string>
    <string name="desc2">Compare and join Services like Gyms or Classes Online in your Area and Get Digital Membership.</string>
    <string name="first_name">Name</string>
    <string name="phone_number">Contact Number</string>
    <string name="we_will_need">We will need Your Information to Begin</string>
    <string name="next">Next</string>
    <string name="birthdate">Enter Your BirthDate</string>
    <string name="account">Account</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="memberships">MemberShips</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="username">Username</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="continue2">Continue</string>
    <string name="title">Title</string>
    <string name="booked_date">Booked Date</string>
    <string name="till_date">Till Date</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="_10">0</string>
    <string name="edit">Edit</string>
    <string name="inactive">Inactive</string>
    <string name="contact_number">Contact Number</string>
    <string name="Gyms">Gyms</string>
    <string name="entertainment">Entertainment</string>
    <string name="yoga">Yoga</string>
    <string name="dance_studio">Dance Studio</string>
    <string name="meditation">Meditation</string>
    <string name="clubs">Clubs and Pubs</string>
    <string name="library">Library</string>
    <string name="health_clubs">Health Clubs</string>
    <string name="swimming">Swimming</string>
    <string name="zumba">Zumba</string>
    <string name="health">Health</string>
    <string name="netflix">Netflix</string>
    <string name="amazon_prime">Prime</string>
    <string name="hotstar">Hotstar</string>
    <string name="other">Other</string>
    <string name="education">Education</string>
    <string name="tuition">Tuition</string>
    <string name="jee_iit">JEE/IIT</string>
    <string name="google">Google</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
</resources>