<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/business_name_sea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="#303030"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/business_address_sea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/address"
                android:textColor="#303030"
                android:drawablePadding="5dp"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                app:drawableStartCompat="@drawable/address"
                app:drawableLeftCompat="@drawable/address" />



        </RelativeLayout>



        <TextView
            android:id="@+id/business_type_sea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/type"

            android:textColor="#303030"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/desc_business_sea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="#303030"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>