<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.Userdata.EditProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/profileImage_EditProfile"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_user"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_photo_EditProfile"
        android:layout_gravity="center"
        android:text="@string/change_profile_photo"
        app:fontFamily="@font/monregular"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="13sp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:hint="@string/first_name"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        app:endIconMode="clear_text"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addName_data_EditProfile">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:drawablePadding="12dp"
        android:autofillHints="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/phone_number"
            android:id="@+id/addPhone_data_EditProfile"
            android:inputType="phone"
            tools:ignore="LabelFor" />


    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/progress_bar_data"
        android:visibility="gone"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_continue_data_EditProfile"
        android:text="@string/continue2"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/monregular"
        android:background="@drawable/btn_circular"
        android:textAllCaps="false"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>


</LinearLayout>