<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.android.mvvmdatabind2.mvvm.viewmodels.AuthViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.auth.RegisterActivity">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:drawablePadding="12dp"
            android:autofillHints="@string/email"
            app:startIconDrawable="@drawable/ic_enail"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="textEmailAddress"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.email}"

          />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:drawablePadding="12dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:startIconDrawable="@drawable/ic_password"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.password}"

 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewmodel.register()}"
            android:layout_marginStart="40dp"
            android:background="@drawable/btn_circular"
            android:textColor="@color/white"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txt_Reg"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="12sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</layout>
